Fixed legent samples layout on safari (#247)
* Fix bugs 219

* Fix change

* Add padding mol_bar

* Add padding in checkbox

* Add padding to checkbox and del minor change

* minor change

* minor change

* Minor change

* Minor change2

* Min change

* Del margin string

* Change legend texas

* minor change

* Fix bug with legend (#202)

* Del flexbox from all tools

* Minor change

* Minor change2

--- a/plot/bar/bar.view.css
+++ b/plot/bar/bar.view.css
@@ -4,9 +4,10 @@
 }
 
 [mol_plot_bar_sample] {
-	padding: .25rem;
-	margin: 0 .5rem;
-	min-height: 1rem;
-	align-self: stretch;
 	background: currentColor;
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
